--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "hardhat": "^2.12.4"
+    "hardhat": "^2.15.0"
   },
   "browserslist": [
     "> 5%"
   ],
   "dependencies": {
+    "dotenv": "^16.1.4",
     "ethers": "^5.7.2",
     "react": "^18.2.0"
   }
